--- a/style.css
+++ b/style.css
@@ -1,3 +1,35 @@
+*{
+    font-size: 16px;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    
+}
+div {
+    border: 5px gray solid;
+    width: 10rem; 
+    height:30rem;
+    margin:1rem auto;
+    padding:0.5rem;
+    box-shadow: 1rem,0.9rem,0.5,1rem gray;
+}
+img {
+    width: 9.5rem;
+    margin:0.2rem;
+}
+
 body{
-    background-color: red;
+    
+}
+p{
+    color: rebeccapurple;
+    width:10rem;
+    height:1rem;
+    margin:1rem auto;
+    font-size: 10px;
+}
+center{
+    color:blue;
+}
+button{
+    height:2rem;
+    margin:1rem auto;
 }
